--- a/views/atejis/selected.jade
+++ b/views/atejis/selected.jade
@@ -6,7 +6,7 @@ block append variables
 
   - tweet = 'Got a new japanese name "'+ name.ateji.string +'" from my name "'+ name.original+'" on ';
   - hashtag = "japaname";
-  - share_url = "http://" + host +"/" + japaname.code;
+  - share_url = "http://" + "japaname.jp" +"/" + japaname.code;
   - description = tweet + " " +  share_url + " #" + hashtag;
   - body_id= "bg-selected";
   - og_image = ""; //!!!!open graph image is required
