--- a/views/artworks/risumaru_ofuda.jade
+++ b/views/artworks/risumaru_ofuda.jade
@@ -36,3 +36,7 @@ block append body-end-scripts
     };
   script(type="text/javascript" src="/javascripts/artwork_js/#{artwork_name}.js")
 
+  script(type="text/javascript" src="https://use.typekit.net/yjx8eou.js")
+  script try{Typekit.load({ async: true });} catch(e){}
+  
+
