--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -24,6 +24,8 @@ $body-side-margin:1rem;
 // Typography
 $base-font-family: $georgia;
 $heading-font-family: $base-font-family;
+$kanji-font-family: "ro-nikkatsu-sei-kai-std",serif;
+// web font available: "ro-shino-std"
 
 // Font Sizes
 $pc-font-size: 62.5%;    // = 10px => 1.6rem = 16px
