--- a/views/artworks.jade
+++ b/views/artworks.jade
@@ -29,7 +29,7 @@ block append body-end-scripts
     var artwork_name = "#{artwork_name}";
     var variables = {
       japaname_string:"#{japaname.names[0].ateji.string}",
-      japaname_code:  "#{japaname.code}",
+      japaname_code:  "#{japaname.code}/",
       japaname_url:   "http://japaname.jp/#{japaname.code}",
       original_name:  "#{japaname.names[0].original}",
     };
