--- a/views/artworks.jade
+++ b/views/artworks.jade
@@ -24,16 +24,17 @@ block body
 block append body-end-scripts
   script(src="/javascripts/jquery.min.js" type="text/javascript")
   script(type="text/javascript" src="/javascripts/snap.svg-min.js")
+  - var share_url = "http://japaname.jp/" + japaname.code;
 
   script(type="text/javascript").
     var artwork_name = "#{artwork_name}";
     var variables = {
       japaname_string:"#{japaname.names[0].ateji.string}",
-      japaname_code:  "#{japaname.code}/",
-      japaname_url:   "http://japaname.jp/#{japaname.code}",
+      japaname_code:  "#{japaname.code}",
+      japaname_url:   "#{japaname.code}",
       original_name:  "#{japaname.names[0].original}",
+      qrcode_url  :   "http://chart.apis.google.com/chart?cht=qr&chld=L|0&chs=150x150&chl=#{share_url}"
     };
-
   script(type="text/javascript" src="/javascripts/artworks.js")
 
   script(type="text/javascript" src="https://use.typekit.net/yjx8eou.js")
