--- a/scss/_topbar.scss
+++ b/scss/_topbar.scss
@@ -69,7 +69,7 @@ div#topbar {
 
         display:block;
 
-        width:$topbar-height;
+        width:auto;
         height:$topbar-height;
       }
     }
