--- a/views/auth/signup.jade
+++ b/views/auth/signup.jade
@@ -8,4 +8,6 @@ block content
       input(name="username" type="text")
     p password:
       input(name="password" type="text")
+    p password:
+      input(name="confirm_password" type="text")
     input(type="submit" value="signup")
