--- a/views/index.jade
+++ b/views/index.jade
@@ -9,8 +9,9 @@ block content
 
   div
     div
-      div(style="height:200px;")
-      h1(style="text-align:center;") Get your <wbr>japaname
+      div(style="height:50px;")
+      h1(style="text-align:center;") Get Your 
+        img(src="/images/japaname_logo_1024.png" alt="japaname" style="max-width:90%;")
 
       include /include/ateji_search.jade
       div(style="height:5rem;font-size:2.5rem")
