--- a/views/atejis/selected.jade
+++ b/views/atejis/selected.jade
@@ -47,6 +47,9 @@ block sub-content
 block append body-end-scripts
   script(type="text/javascript" src="/underscore/underscore-min.js")
   script(type="text/javascript" src="/javascripts/imageProcessing.js")
+  script(src="https://use.typekit.net/yjx8eou.js")
+  script try{Typekit.load({ async: true });}catch(e){}
+
   script(type="text/javascript").
     //returns promise
 
