--- a/views/template/basic_layout.jade
+++ b/views/template/basic_layout.jade
@@ -1,11 +1,11 @@
 extends /template/structnew
 
 block body-begin-scripts
-  <script> window.fbAsyncInit = function() { FB.init({ appId      : '1724484991112261', xfbml      : true, version    : 'v2.4' }); }; (function(d, s, id){ var js, fjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "//connect.facebook.net/en_US/sdk.js"; fjs.parentNode.insertBefore(js, fjs); }(document, 'script', 'facebook-jssdk')); </script>
+  //Facebook
+  <script> window.fbAsyncInit = function() { FB.init({ appId      : '1723410414583359', xfbml      : true, version    : 'v2.6' }); }; (function(d, s, id){ var js, fjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "//connect.facebook.net/en_US/sdk.js"; fjs.parentNode.insertBefore(js, fjs); }(document, 'script', 'facebook-jssdk')); </script> 
 
 block body
   div.page-bg
-
   div.at-container
     block content
 
@@ -15,5 +15,4 @@ block append body-end-scripts
   script(src="/javascripts/jquery.min.js" type="text/javascript")
 
   //Google Analytics
-  <script> (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){ (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m) })(window,document,'script','//www.google-analytics.com/analytics.js','ga'); ga('create', 'UA-65164419-1', 'auto'); ga('send', 'pageview'); </script>
-
+  <script> (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){ (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m) })(window,document,'script','https://www.google-analytics.com/analytics.js','ga'); ga('create', 'UA-80476227-1', 'auto'); ga('send', 'pageview'); </script> 
