--- a/views/include/sharebox.jade
+++ b/views/include/sharebox.jade
@@ -9,10 +9,6 @@ mixin sharebox( tweet, share_url, hashtag )
             a(href="http://twitter.com/share?text=#{tweet}&url=#{share_url}&hashtags=#{hashtag}" onClick="window.open(encodeURI(decodeURI(this.href)), 'tweetwindow', 'width=650, height=470, personalbar=0, toolbar=0, scrollbars=1, sizable=1'); return false;" rel="nofollow")
               img.img-responsive(src="/images/tw-tweet.png" alt="tweet" width="104" height="50")
 
-          //
-            div#facebook-share.share-button
-              a(class="fb-like" href="http://www.facebook.com/plugins/like.php?href=#{share_url}" onclick="javascript:window.open('http://www.facebook.com/plugins/like.php?href=#{share_url}' ,null ,'width=650 ,height=450'); return false;" rel="nofollow")
-                img(src="/images/fb-like.png" alt="like!" width="104" height="50")
 
           div#facebook-share.share-button
             a(href="http://www.facebook.com/share.php?u=#{share_url}" onclick="window.open(this.href, 'FBwindow', 'width=650, height=450, menubar=no, toolbar=no, scrollbars=yes'); return false;")
@@ -21,6 +17,7 @@ mixin sharebox( tweet, share_url, hashtag )
 
 
         div(style="overflow:hidden")
+          div.fb-like(data-share="true" data-width="450" data-show-faces="true")
 
 
       div#share-qr
