--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -15,7 +15,7 @@ $topbar-color: #b28f44;
 
 $topbar-color: $ateji-oudo-color;
 
-$topbar-height:4rem; 
+$topbar-height:auto; 
 
 $body-side-margin:1rem;
 
