--- a/scss/main.scss
+++ b/scss/main.scss
@@ -21,6 +21,8 @@
 @import "share-this-page";
 @import "flash-message";
 
+//BEMS モジュール
+@import "jnSearchBox";
 
 ///////////// pages /////////////////
 //だんだん↑に移動していくべきだと思う
