--- a/views/atejis/candidates.jade
+++ b/views/atejis/candidates.jade
@@ -1,10 +1,10 @@
 extends /template/sub_layout
 
 block append variables
-  - title = "ATEJI candidates of " + original_name;
-  - description = "ATEJI candidates of "+ original_name +". You can select your Kanji from many candidates which fits your sound by meanings or shape of kanji.";
-  - tweet =  "ATEJI candidates of " + original_name;
-  - share_url = url;
+  - title = "Japaname candidates of " + original_name;
+  - description = "Japaname candidates of "+ original_name +". You can select your Kanji from many candidates which fits your sound by meanings or shape of kanji.";
+  - tweet =  "Japaname candidates of " + original_name;
+  - share_url = "http://japaname.jp/names/candidates/" + original_name; //直書きよくないけどしゃーない！！！
   - body_id = "bg-candidates";
 
 block sub-content
