--- a/views/include/ateji_search.jade
+++ b/views/include/ateji_search.jade
@@ -1,8 +1,8 @@
 mixin ateji_search(original_name,  placeholder, button, focus)
-  form.ateji-search.center(role="search" method="get" action="/names/candidates/")
-    input(id="original_name" name="original_name" type="search" placeholder="#{placeholder || 'Enter Your Name'}" value ="#{original_name || ''}")
+  form.jnSearchBox(role="search" method="get" action="/names/candidates/")
+    input.jnSearchBox__textbox(id="original_name" name="original_name" type="search" placeholder="#{placeholder || 'Enter Your Name'}" value ="#{original_name || ''}")
 
-    button(type="submit") #{button || "Get ATEJI!"}
+    button.jnSearchBox__button(type="submit") #{button || "Japaname!"}
 
 
   if focus
