--- a/views/include/sharebox.jade
+++ b/views/include/sharebox.jade
@@ -2,7 +2,7 @@ mixin sharebox( tweet, share_url, hashtag )
   div#share-this-page
     div
       div#share-sns
-        h4 Share of SNS 
+        h4 Share your name on SNS!
 
         div.share-buttons
           div#twitter-share.share-button
