--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -245,8 +245,8 @@ table.n {
       padding: 0; }
 
 body.topbar-margin {
-  margin-top: 4rem;
-  background-position: 0px 4rem; }
+  margin-top: auto;
+  background-position: 0px auto; }
 
 body {
   font-family: "Georgia", "Cambria", "Times New Roman", "Times", serif;
@@ -342,12 +342,8 @@ div form.ateji-search {
     font-size: 0.8em; }
 
 div#topbar {
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  z-index: 1000;
   width: 100%;
-  height: 4rem;
+  height: auto;
   box-shadow: black 0px 0px 20px;
   background: #b28f44; }
   div#topbar.searching-topbar div#topbar-container #ateji-logo-hanko {
@@ -365,6 +361,8 @@ div#topbar {
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto; }
+    div#topbar div#topbar-container #japaname-logo-small {
+      height: 3em; }
     div#topbar div#topbar-container::after {
       clear: both;
       content: "";
@@ -373,7 +371,8 @@ div#topbar {
       float: left;
       display: block;
       margin-right: 2.85714%;
-      width: 22.85714%; }
+      width: 22.85714%;
+      height: 2em; }
       div#topbar div#topbar-container #ateji-logo-hanko:last-child {
         margin-right: 0; }
     div#topbar div#topbar-container #topbar-ateji-search {
@@ -417,14 +416,10 @@ div#topbar {
         float: right; }
         div#topbar div#topbar-container #user-info:last-child {
           margin-right: 0; } }
-    div#topbar div#topbar-container #ateji-logo-hanko img {
-      display: block;
-      width: auto;
-      height: 4rem; }
     div#topbar div#topbar-container #user-info {
       overflow: hidden;
       white-space: nowrap;
-      line-height: 4rem;
+      line-height: auto;
       text-align: right;
       font-size: 2.1rem;
       color: white; }
@@ -656,6 +651,42 @@ div#share-this-page {
     .flash-success a:focus, .flash-success a:hover {
       color: black; }
 
+.jnSearchBox {
+  padding: 0;
+  border-bottom: 2px solid;
+  font-size: 3rem;
+  background: white;
+  position: relative;
+  overflow: hidden; }
+  .jnSearchBox::after {
+    clear: both;
+    content: "";
+    display: table; }
+
+input[type="search"].jnSearchBox__textbox {
+  display: block;
+  border: 0;
+  box-shadow: none;
+  border-radius: 0;
+  width: auto;
+  padding: 0.9rem;
+  margin: 0;
+  height: 4.8rem;
+  line-height: 1;
+  font-size: 3rem; }
+
+.jnSearchBox__button {
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+  box-sizing: border-box;
+  border-radius: 0;
+  height: 4.8rem;
+  padding: 0.9rem;
+  width: auto;
+  line-height: 1; }
+
 html {
   box-sizing: border-box; }
 
@@ -716,7 +747,7 @@ div#index-logo-container {
 
 div#kanji-selected-wrapper {
   position: fixed;
-  top: 4rem;
+  top: auto;
   left: 0;
   right: 0;
   z-index: 900;
