--- a/views/atejis/selected.jade
+++ b/views/atejis/selected.jade
@@ -4,7 +4,7 @@ block append variables
   - name = japaname.names[0]
   - title = name.ateji.string +" --- japaname of " + name.original;
 
-  - tweet = 'Got a new japanese name "'+ name.ateji.string +'" from my name "'+ name.original+'" on ';
+  - tweet = 'Got a japaname"'+ name.ateji.string +'" from my name "'+ name.original+'" on ';
   - hashtag = "japaname";
   - share_url = "http://" + "japaname.jp" +"/" + japaname.code;
   - description = tweet + " " +  share_url + " #" + hashtag;
