added bg and risumaru. small bug fixes

--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -14,7 +14,8 @@ body{
 
 body#normal,
 body#bg-index{
-  background-image:url("/images/bg-index.jpg");
+  background-image:url("/images/bg-washi.jpg");
+  background-size:cover;
 }
 
 body#bg-plane{
