--- a/views/japaname_not_found.jade
+++ b/views/japaname_not_found.jade
@@ -2,12 +2,11 @@ extends /template/sub_layout
 
 block sub-content
 
-  h1 Sorry, #{original_name}!  We didn't know how to read your name!
-  h2= error_code
+  h1 404 Sorry, #{original_name}!  
+  h3 We are not sure about your name pronounciation!
 
   div
-    p.h3 We are so sorry, #{original_name}.
-    p Japaname.jp has to prepare pronounciation of your name to give your kanji japaname.
+    p Japaname.jp has to prepare pronounciation of your name to give you a kanji japaname.
     p Please <a href="https://m.me/fumicode"> send a messeage on facebook!</a>
 
     
