--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -49,6 +49,10 @@ select {
   display: block;
   font-family: "Georgia", "Cambria", "Times New Roman", "Times", serif;
   font-size: 1.6rem; }
+  input.inline,
+  label.inline,
+  select.inline {
+    display: inline; }
 
 label {
   font-weight: 600;
@@ -69,8 +73,7 @@ select[multiple=multiple] {
   font-size: 1.6rem;
   margin-bottom: 0.75em;
   padding: 0.5em;
-  transition: border-color 150ms ease;
-  width: 100%; }
+  transition: border-color 150ms ease; }
   input[type="color"]:hover, input[type="date"]:hover, input[type="datetime"]:hover, input[type="datetime-local"]:hover, input[type="email"]:hover, input[type="month"]:hover, input[type="number"]:hover, input[type="password"]:hover, input[type="search"]:hover, input[type="tel"]:hover, input[type="text"]:hover, input[type="time"]:hover, input[type="url"]:hover, input[type="week"]:hover, input:not([type]):hover, textarea:hover,
   select[multiple=multiple]:hover {
     border-color: #b1b1b1; }
@@ -102,12 +105,10 @@ input[type="radio"] {
     display: inline-block; }
 
 input[type="file"] {
-  margin-bottom: 0.75em;
-  width: 100%; }
+  margin-bottom: 0.75em; }
 
 select {
   margin-bottom: 1.5em;
-  max-width: 100%;
   width: auto; }
 
 ul,
@@ -256,7 +257,8 @@ body {
 
 body#normal,
 body#bg-index {
-  background-image: url("/images/bg-index.jpg"); }
+  background-image: url("/images/bg-washi.jpg");
+  background-size: cover; }
 
 body#bg-plane {
   background: white repeat;
@@ -282,7 +284,8 @@ body#bg-selected {
   margin-right: auto;
   display: block;
   padding-left: 1rem;
-  padding-right: 1rem; }
+  padding-right: 1rem;
+  position: relative; }
   .at-container::after {
     clear: both;
     content: "";
@@ -342,6 +345,8 @@ div form.ateji-search {
     font-size: 0.8em; }
 
 div#topbar {
+  position: relative;
+  z-index: 100;
   width: 100%;
   height: auto;
   box-shadow: black 0px 0px 20px;
@@ -788,10 +793,15 @@ div#kanji-selected-wrapper {
       div#kanji-selected-wrapper div#kanji-selected-container div#kanji-button-container:last-child {
         margin-right: 0; }
       div#kanji-selected-wrapper div#kanji-selected-container div#kanji-button-container button.gonext {
+        text-align: left;
         box-sizing: border-box;
         width: 100%;
         white-space: normal;
-        padding: 1em; }
+        padding: 1em;
+        background-image: url(/images/risumaru_yubi_right.png);
+        background-repeat: no-repeat;
+        background-position: right bottom;
+        background-size: contain; }
 
 div#kanji-selected-container-margin {
   height: 10rem; }
@@ -1015,6 +1025,11 @@ a.ateji-side-banner {
   border-radius: 5px; }
   a.ateji-side-banner strong {
     display: block; }
+
+.ateji_risumaru_box {
+  background-image: url(/images/risumaru_jump_left.png);
+  background-position: right bottom;
+  background-size: 20%; }
 
 div#yukikaki-ads {
   text-align: center; }
