--- a/scss/_page-atejis-candidates.scss
+++ b/scss/_page-atejis-candidates.scss
@@ -48,10 +48,15 @@ div#kanji-selected-wrapper{
       @include span-columns(1);
 
       button.gonext {
+        text-align:left;
         box-sizing:border-box;
         width:100%;
         white-space:normal;
         padding:1em;
+        background-image:url(/images/risumaru_yubi_right.png);
+        background-repeat:no-repeat;
+        background-position:right bottom;
+        background-size:contain;
       }
     }
   }
