--- a/scss/base/_forms.scss
+++ b/scss/base/_forms.scss
@@ -11,6 +11,10 @@ select {
   display: block;
   font-family: $base-font-family;
   font-size: $base-font-size;
+
+  &.inline{
+    display: inline;
+  }
 }
 
 label {
@@ -38,7 +42,7 @@ select[multiple=multiple] {
   margin-bottom: $small-spacing;
   padding: $base-spacing / 3;
   transition: border-color $base-duration $base-timing;
-  width: 100%;
+  //width: 100%;
 
   &:hover {
     border-color: shade($base-border-color, 20%);
@@ -80,11 +84,11 @@ input[type="radio"] {
 
 input[type="file"] {
   margin-bottom: $small-spacing;
-  width: 100%;
+  //width: 100%;
 }
 
 select {
   margin-bottom: $base-spacing;
-  max-width: 100%;
+  //max-width: 100%;
   width: auto;
 }
