--- a/views/artworks.jade
+++ b/views/artworks.jade
@@ -1,16 +1,29 @@
 extends /template/simple_struct
-
 block body
-
   - if(preview){
-  -  artwork_width = 50; //mm
-  -  var artwork_height = artwork_width / 5*9;
-  - }else{
-  -  var artwork_height = artwork_width / 5*9;
+  -   artwork_width = 50; //mm
   - }
+  - var artwork_height = artwork_width * artwork.ratio;
 
-  if(preview)
-    h1 プレビュー #{artwork_name} #{japaname.code} 
+  if preview
+    h1 プレビュー #{artwork.artwork_name} #{japaname.code} 
+
+  
+  if sizing 
+    table
+      tr
+        td
+          form(action="" method="GET")
+            p
+              |印刷する幅  
+              input(type="text" name="artwork_width" value="#{artwork_width}")
+              |mm
+        td
+          form(action="/shops/arton/artworks/#{artwork.artwork_name}/#{japaname.code}/print" method="GET")
+            input(type="hidden" name="artwork_width" value="#{artwork_width}")
+            input(type="submit" value="印刷する")
+
+
 
   
   div(style="text-align:center ;")
@@ -18,7 +31,7 @@ block body
 
   if(preview)
     div
-      form(action="/purchases/#{artwork_name}/#{japaname.code}/" method="post")
+      form(action="/purchases/#{artwork.artwork_name}/#{japaname.code}/" method="post")
         input(type="submit" value="購入して印刷する")
 
 block append body-end-scripts
@@ -27,7 +40,7 @@ block append body-end-scripts
   - var share_url = "http://japaname.jp/" + japaname.code;
 
   script(type="text/javascript").
-    var artwork_name = "#{artwork_name}";
+    var artwork_name = "#{artwork.artwork_name}";
     var variables = {
       japaname_string:"#{japaname.names[0].ateji.string}",
       japaname_code:  "#{japaname.code}",
@@ -37,7 +50,14 @@ block append body-end-scripts
     };
   script(type="text/javascript" src="/javascripts/artworks.js")
 
+  if print
+    script(type="text/javascript").
+      setTimeout(function(){
+        window.print();
+
+      },1000);
+
+
   script(type="text/javascript" src="https://use.typekit.net/yjx8eou.js")
   script try{Typekit.load({ async: true });} catch(e){}
-  
 
